<resources>
    <string name="app_name">GoToRute</string>
    <string name="my_routes_title">My Routes</string>
    <string name="navigate_title">Navigate</string>
    <string name="profile_title">Profile</string>
    <string name="search_places_message">Where do you want to go?</string>
    <string name="maps_api_key">AIzaSyA2Yy26_3g5b8ZLr7UGN8H3jEBBjz7dPGE</string>
    <string name="permission_denied_message">The app needs location permissions, please enable location access in settings</string>
    <string name="cannot_get_current_location">We cannot get current position, try again later</string>
    <string name="check_user_position_service_description">Service used to check if the current position is out of current route</string>
    <string name="weather_report_title">Weather Report</string>
    <string name="congrats_title_message">Felicitaciones! Llegaste a tu destino</string>
    <string name="favorite_congrats_title">Si te gustó está ruta, guardala en tus favoritos!</string>
    <string name="place_name_hint">Enter Place Name</string>
    <string name="my_favorites_routes_title">Mis rutas guardadas</string>
    <string name="profile_screen_title">Profile Settings</string>
    <string name="general_card_title">General</string>
    <string name="fake_name">Scarlett Davis</string>
    <string name="fake_email">scarlettdavis@gmail.com</string>
    <string name="preferences_title">Preferences</string>
    <string name="profile_settings_edit_profile">Edit Profile</string>
    <string name="profile_settings_edit_profile_details">Change profile picture, number, E-mail</string>
    <string name="profile_settings_change_password">Change Password</string>
    <string name="profile_settings_change_password_details">Update and strengthen account security</string>
    <string name="profile_settings_terms_of_use">Terms of Use</string>
    <string name="profile_settings_terms_of_use_details">Protect your account now</string>
    <string name="profile_settings_add_card">Add Card</string>
    <string name="profile_settings_add_card_details">Securely add payment method</string>
    <string name="profile_settings_notification">Notification</string>
    <string name="profile_settings_notification_details">Customize your notifications preferences</string>
    <string name="profile_settings_faq">FAQ</string>
    <string name="profile_settings_faq_details">Common questions about us</string>
    <string name="profile_settings_logout">Log Out</string>
    <string name="profile_settings_logout_details">Securely log out of Account</string>
</resources>